--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^4.4.0",
     "styled-components": "^3.4.9",
     "styled-reset": "^1.5.1"
@@ -29,6 +30,7 @@
     "@types/node": "^10.11.3",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.8",
+    "@types/react-sidebar": "^3.0.0",
     "typescript": "^3.1.1"
   }
 }
