--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
     "apollo-boost": "^0.1.16",
+    "axios": "^0.18.0",
+    "google-maps-react": "^2.0.2",
     "graphql": "^14.0.2",
     "react": "^16.5.2",
     "react-apollo": "^2.2.3",
@@ -26,6 +28,8 @@
     "codegen": "apollo codegen:generate src/types/api.d.ts --queries='src/**/!(*.local).ts' --addTypename --schema schema.json --target typescript --outputFlat"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/googlemaps": "^3.30.16",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.3",
     "@types/react": "^16.4.14",
